--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: cpp
 sudo: required
 dist: trusty
+osx_image: xcode7.1
 
 os:
   - linux
@@ -9,6 +10,11 @@ os:
 compiler:
   - clang
   - gcc
+
+matrix:
+  exclude:
+    - os: osx
+      compiler: gcc
 
 env:
   global:
@@ -24,6 +30,10 @@ before_install:
     sudo apt-get install -qq debhelper prorab doxygen libutki-dev;
   fi
 - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
+    sudo gem install cocoapods;
+    pod repo add --silent igagis https://$HOMEBREW_GITHUB_USERNAME:$HOMEBREW_GITHUB_ACCESS_TOKEN@github.com/igagis/cocoapods-repo.git;
+    pod install --project-directory=ios;
+
     brew tap igagis/tap;
     brew update > /dev/null;
     brew install prorab libutki;
@@ -37,6 +47,10 @@ script:
 - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
     make;
     make test;
+    
+    xcodebuild -workspace ios/tests.xcworkspace -scheme tests CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO;
+
+    if [ -n "$TRAVIS_TAG" ]; then prorab-deploy-cocoapods.sh igagis; else echo "Skip deploying to cocoapods because not a tagged commit!!!"; fi;
   fi
 
 deploy:
