--- a/homebrew/libkolme.rb.in
+++ b/homebrew/libkolme.rb.in
@@ -9,7 +9,9 @@ class Libkolme < Formula
 
   def install
     ENV['PATH'] += ':/usr/local/bin'
-    system "make", "install"
+    system "make", "install", "PREFIX=#{prefix}"
+    system "rm", "#{prefix}/bin/tests"
+    system "rm", "#{prefix}/include/dummy.hpp"
   end
 
   test do
