--- a/homebrew/libkolme.rb.in
+++ b/homebrew/libkolme.rb.in
@@ -10,7 +10,7 @@ class Libkolme < Formula
   def install
     ENV['PATH'] += ':/usr/local/bin'
     system "make", "install", "PREFIX=#{prefix}"
-    system "rm", "#{prefix}/bin/tests"
+#    system "rm", "#{prefix}/bin/tests"
     system "rm", "#{prefix}/include/dummy.hpp"
   end
 
