--- a/nuget/nuget.autopkg.in
+++ b/nuget/nuget.autopkg.in
@@ -1,7 +1,7 @@
 nuget{
 	nuspec{
 		id = libkolme;
-		version : $(version).1; //increase this trailing number if this file has changed to generate a new version of the NuGet package
+		version : $(version);
 		title: C++ 3d math library;
 		authors: {Ivan Gagis};
 		owners: {Ivan Gagis};
