--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,14 @@ before_install:
     sudo apt-get update -qq &&
     sudo apt-get install -qq debhelper prorab doxygen libutki-dev;
   fi
+# Force bundler 1.12.5 because version 1.13 has issues, see https://github.com/fastlane/fastlane/issues/6065#issuecomment-246044617
 - if [ "$TRAVIS_OS_NAME" == "osx" ]; then
     rvm install ruby-2.2.2 &&
     rvm use ruby-2.2.2 &&
+    
+    rvm 2.2.1 do gem uninstall bundler -v '>1.12.5' --force &&
+    rvm 2.2.1 do gem install bundler -v 1.12.5 --no-rdoc --no-ri --no-document --quiet &&
+    
     sudo gem install cocoapods &&
     pod repo add --silent igagis https://$PRORAB_GIT_USERNAME:$PRORAB_GIT_ACCESS_TOKEN@github.com/igagis/cocoapods-repo.git &&
     pod install --project-directory=ios &&
@@ -96,7 +101,7 @@ deploy:
     condition: $TRAVIS_OS_NAME = osx && $CC = clang
 - provider: script
   skip_cleanup: true
-  script: rvm 2.2.1 do prorab-deploy-cocoapods.sh igagis
+  script: rvm 2.2.1 do prorab-deploy-cocoapods.sh -r igagis
   on:
     tags: true
     condition: $TRAVIS_OS_NAME = osx && $CC = clang
