--- a/debian/control.in
+++ b/debian/control.in
@@ -2,7 +2,7 @@ Source: libkolme
 Section: libs
 Priority: extra
 Maintainer: Ivan Gagis <igagis@gmail.com>
-Build-Depends: debhelper (>= 9), prorab,
+Build-Depends: debhelper (>= 9), prorab, prorab-extra, myci, doxygen,
 		libutki-dev
 Build-Depends-Indep: doxygen
 Standards-Version: 3.9.2
