--- a/homebrew/r4.rb.in
+++ b/homebrew/r4.rb.in
@@ -1,7 +1,7 @@
-class Libkolme < Formula
+class R4 < Formula
   desc "C++ 3d math library."
-  homepage "https://github.com/igagis/kolme"
-  url "https://github.com/igagis/kolme/archive/$(version).tar.gz"
+  homepage "https://github.com/igagis/r4"
+  url "https://github.com/igagis/r4/archive/$(version).tar.gz"
   sha256 "$(sha256)"
 
   depends_on "prorab" => :build
