--- a/msvs_solution/r4/libkolme.vcxproj
+++ b/msvs_solution/r4/libkolme.vcxproj
@@ -37,7 +37,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{90344592-5BE0-43E3-BD74-46E969441F7E}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>libkolme</RootNamespace>
+    <RootNamespace>r4</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
