--- a/nuget/nuget.autopkg.in
+++ b/nuget/nuget.autopkg.in
@@ -2,8 +2,13 @@ configurations {
         UserPlatformToolset {
                 // Needed because autopackage lacks VS2015+ support
                 key = "PlatformToolset";
-                choices: "v140,v141";
+                choices: "v140,v141,v142";
         };
+
+		RuntimeLibrary {
+			key = "RuntimeLibrary"; // This is the key you can find in .vcxproj file
+			choices: "MultiThreaded,MultiThreadedDebug,MultiThreadedDLL,MultiThreadedDebugDLL"; // these choices must be valid values for .vcxproj file
+		};
 }
 
 nuget{
@@ -36,36 +41,64 @@ nuget{
 			"..\src\r4\**\*.hpp"
 		};
 
+		// ======= v140 tools =======
+
 		[x86,v140,release] {
-//                        lib: ..\msvs_solution\v140_Release\r4.lib;
-                }
+//			lib: ..\msvs_solution\v140_Release\r4.lib;
+		}
+		[x86,v140,debug] {
+//			lib: ..\msvs_solution\v140_Debug\r4.lib;
+		}
+		[x64,v140,release] {
+//			lib: ..\msvs_solution\x64\v140_Release\r4.lib;
+		}
+		[x64,v140,debug] {
+//			lib: ..\msvs_solution\x64\v140_Debug\r4.lib;
+		}
 
-                [x86,v140,debug] {
-//                        lib: ..\msvs_solution\v140_Debug\r4.lib;
-                }
 
-                [x64,v140,release] {
-//                        lib: ..\msvs_solution\x64\v140_Release\r4.lib;
-                }
+		// ======= v141 tools =======
 
-                [x64,v140,debug] {
-//                        lib: ..\msvs_solution\x64\v140_Debug\r4.lib;
-                }
+		[x86,v141,release] {
+//			lib: ..\msvs_solution\v141_Release\r4.lib;
+		}
+		[x86,v141,debug] {
+//			lib: ..\msvs_solution\v141_Debug\r4.lib;
+		}
+		[x64,v141,release] {
+//			lib: ..\msvs_solution\x64\v141_Release\r4.lib;
+		}
+		[x64,v141,debug] {
+//			lib: ..\msvs_solution\x64\v141_Debug\r4.lib;
+		}
 
-                [x86,v141,release] {
-//                        lib: ..\msvs_solution\v141_Release\r4.lib;
-                }
 
-                [x86,v141,debug] {
-//                        lib: ..\msvs_solution\v141_Debug\r4.lib;
-                }
+		// ======= v142 tools ========
 
-                [x64,v141,release] {
-//                        lib: ..\msvs_solution\x64\v141_Release\r4.lib;
-                }
+		[x86,v142,release,MultiThreaded] {
+//			lib: ..\msvs_solution\v142_Release_MT\r4.lib;
+		}
+		[x86,v142,debug,MultiThreadedDebug] {
+//			lib: ..\msvs_solution\v142_Debug_MT\r4.lib;
+		}
+		[x64,v142,release,MultiThreaded] {
+//			lib: ..\msvs_solution\x64\v142_Release_MT\r4.lib;
+		}
+		[x64,v142,debug,MultiThreadedDebug] {
+//			lib: ..\msvs_solution\x64\v142_Debug_MT\r4.lib;
+		}
+		[x86,v142,release,MultiThreadedDLL] {
+//			lib: ..\msvs_solution\v142_Release_MD\r4.lib;
+		}
+		[x86,v142,debug,MultiThreadedDebugDLL] {
+//			lib: ..\msvs_solution\v142_Debug_MD\r4.lib;
+		}
+		[x64,v142,release,MultiThreadedDLL] {
+//			lib: ..\msvs_solution\x64\v142_Release_MD\r4.lib;
+		}
+		[x64,v142,debug,MultiThreadedDebugDLL] {
+//			lib: ..\msvs_solution\x64\v142_Debug_MD\r4.lib;
+		}
 
-                [x64,v141,debug] {
-//                        lib: ..\msvs_solution\x64\v141_Debug\r4.lib;
-                }
 	}
 }
