--- a/.travis.yml
+++ b/.travis.yml
@@ -85,7 +85,8 @@ before_install:
     brew install myci &&
 
     sudo gem install cocoapods &&
-    pod repo add --silent igagis https://$MYCI_GIT_USERNAME:$MYCI_GIT_ACCESS_TOKEN@github.com/igagis/cocoapods-repo.git;
+    pod repo add --silent igagis https://$MYCI_GIT_USERNAME:$MYCI_GIT_ACCESS_TOKEN@github.com/igagis/cocoapods-repo.git &&
+    pod install --project-directory=xcode;
   fi
 - export PACKAGE_VERSION=$(myci-deb-version.sh debian/changelog)
 
@@ -99,6 +100,13 @@ install:
     echo y | sdkmanager "cmake;3.6.4111459";
   fi
 
+before_script:
+# - if [ "$TRAVIS_JOB_NAME" == "ios" ]; then
+#     curl -L https://github.com/zackslash/Xcode-Proj-Adder/raw/master/bin/XcodeProjAdder -O &&
+#     chmod +x XcodeProjAdder &&
+#     (cd xcode/$PACKAGE_NAME && ../../XcodeProjAdder -XCP $PACKAGE_NAME.xcodeproj -SCSV `echo $(find ../../src -type f -name *.cpp) | sed -E -e 's/ /,/g'`)
+#   fi
+
 script:
 - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ -z "$TRAVIS_JOB_NAME" ]; then
     docker exec ccc dpkg-buildpackage -us -uc;
@@ -106,20 +114,9 @@ script:
 - if [ "$TRAVIS_JOB_NAME" == "macosx" ]; then
     make;
   fi
-# need to reduce output from xcodebuild because log size on travis-ci is limited by 4Mb, use grep for errors and warnings
-# Also, need to set pipefail to make pipe exit code nono-zero in case first command fails but second succeeds (because grep exits with 0 always)
 - if [ "$TRAVIS_JOB_NAME" == "ios" ]; then
-    xcodebuild -workspace ios/tests.xcworkspace -scheme tests CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
-            | sed -e "s/export PATH=[^ ]*/export PATH=.../g"
-            | sed -e "s/[^ ]*\/clang /clang /g"
-            | sed -e "s/\(-[IWfFL]\)[^ ]*/% /g"
-            | sed -e "s/-isystem [^ ]*/%/g"
-            | sed -e "s/-include [^ ]*/%/g"
-            | sed -e "s/-MF [^ ]*/%/g"
-            | sed -e "s/--serialize-diagnostics [^ ]*/%/g"
-            | sed -e "s/-o [^ ]*/%/g"
-            | sed -e "s/-iquote [^ ]*/%/g"
-            | sed -e "s/-isysroot [^ ]*/%/g";
+    xcodebuild -workspace xcode/$PACKAGE_NAME.xcworkspace -scheme $PACKAGE_NAME CONFIGURATION_BUILD_DIR=../build -configuration Release &&
+    myci-create-zip-package.sh -h src -f LICENSE $PACKAGE_NAME-$PACKAGE_VERSION.zip;
   fi
 - if [ "$TRAVIS_JOB_NAME" == "android" ]; then
     (cd android && ./gradlew build) &&
@@ -151,7 +148,7 @@ deploy:
     condition: $TRAVIS_JOB_NAME = macosx
 - provider: script
   skip_cleanup: true
-  script: rvm 2.3.3 do myci-deploy-cocoapods.sh -r igagis
+  script: rvm 2.3.3 do myci-deploy-cocoapods.sh -r igagis -v $PACKAGE_VERSION -u igagis -b cocoapods -p $PACKAGE_NAME-$PACKAGE_VERSION.zip cocoapods/$PACKAGE_NAME.podspec.in
   on:
     tags: true
     condition: $TRAVIS_JOB_NAME = ios
