--- a/cocoapods/r4.podspec.in
+++ b/cocoapods/r4.podspec.in
@@ -8,14 +8,10 @@ Pod::Spec.new do |s|
   s.platform     = :ios
   s.ios.deployment_target = '8.0'
 
-#  s.source = { :http => "https://dl.bintray.com/igagis/cocoapods/#{s.name}/#{s.version}/#{s.name}-#{s.version}.zip" }
-#  s.source_files  = "include/**/*.{hpp,h}"
-#  s.header_mappings_dir = "include"
+  s.source = { :http => "https://dl.bintray.com/igagis/cocoapods/#{s.name}/#{s.version}/#{s.name}-#{s.version}.zip" }
+  s.source_files  = "include/**/*.{hpp,h}"
+  s.header_mappings_dir = "include"
 #  s.ios.vendored_library = "lib/ios/lib#{s.name}.a"
-
-  s.source = { :git => "https://github.com/igagis/#{s.name}.git", :tag => s.version }
-  s.source_files  = "src/**/*.{hpp,cpp}"
-  s.header_mappings_dir = "src"
 
   s.dependency 'utki', '>= 1.1.30'
 end
