Vector4 renamed to vector4

--- a/msvs_solution/r4/r4.vcxproj
+++ b/msvs_solution/r4/r4.vcxproj
@@ -482,7 +482,7 @@
     <ClInclude Include="..\..\src\kolme\Rectangle.hpp" />
     <ClInclude Include="..\..\src\kolme\Vector2.hpp" />
     <ClInclude Include="..\..\src\kolme\Vector3.hpp" />
-    <ClInclude Include="..\..\src\kolme\Vector4.hpp" />
+    <ClInclude Include="..\..\src\kolme\vector4.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
