--- a/msvs_solution/r4/r4.vcxproj.filters
+++ b/msvs_solution/r4/r4.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClInclude Include="..\..\src\kolme\Vector3.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\kolme\Vector4.hpp">
+    <ClInclude Include="..\..\src\kolme\vector4.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
