--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-sudo: required
-
 services:
 - docker
 
@@ -33,11 +31,11 @@ matrix:
     - name: macosx
       os: osx
       compiler: clang
-      osx_image: xcode11
+      osx_image: xcode11.3
     - name: ios
       os: osx
       compiler: clang
-      osx_image: xcode11
+      osx_image: xcode11.3
     - name: android
       language: android
       android:
@@ -60,8 +58,9 @@ env:
   - MYCI_GIT_USERNAME=igagis
   - PACKAGE_NAME=r4
   matrix:
-  - OS_REL=xenial OS=ubuntu DOCKER_IMAGE=$OS:$OS_REL PACKAGE_TYPE=deb
+  # - OS_REL=xenial OS=ubuntu DOCKER_IMAGE=$OS:$OS_REL PACKAGE_TYPE=deb
   - OS_REL=bionic OS=ubuntu DOCKER_IMAGE=$OS:$OS_REL PACKAGE_TYPE=deb
+  - OS_REL=eoan OS=ubuntu DOCKER_IMAGE=$OS:$OS_REL PACKAGE_TYPE=deb
   - OS_REL=stretch OS=debian DOCKER_IMAGE=$OS:$OS_REL PACKAGE_TYPE=deb
   - OS_REL=buster OS=debian DOCKER_IMAGE=$OS:$OS_REL PACKAGE_TYPE=deb
   - OS_REL=stretch OS=raspbian DOCKER_IMAGE=igagis/$OS:$OS_REL PACKAGE_TYPE=deb
@@ -131,7 +130,7 @@ script:
     myci-create-zip-package.sh -h src -f LICENSE $PACKAGE_NAME-$PACKAGE_VERSION.zip;
   fi
 - if [ "$TRAVIS_JOB_NAME" == "android" ]; then
-    (cd android && ./gradlew build) &&
+    (cd android && ./gradlew copy_aar) &&
     myci-apply-version.sh -v $PACKAGE_VERSION android/*.pom.in &&
     myci-apply-version.sh -v $PACKAGE_VERSION android/*.aar.in --filename-only;
   fi
