--- a/tests/vector2/makefile
+++ b/tests/vector2/makefile
@@ -6,9 +6,11 @@ this_out_dir := build
 
 this_srcs := main.cpp
 
-this_cxxflags += -std=c++14
+this_cxxflags += -std=c++14 -fPIC
 
 this_ldlibs += -lstdc++
+
+this_no_install := true
 
 $(eval $(prorab-build-app))
 
