--- a/tests/matrix3/makefile
+++ b/tests/matrix3/makefile
@@ -8,7 +8,7 @@ this_srcs := main.cpp
 
 this_cxxflags += -std=c++14 -fPIC
 
-this_ldlibs += -lstdc++
+this_ldlibs += -lstdc++ -lm
 
 this_no_install := true
 
