--- a/homebrew/libr4.rb.in
+++ b/homebrew/libr4.rb.in
@@ -5,6 +5,7 @@ class Libr4 < Formula
   sha256 "$(sha256)"
 
   depends_on "prorab" => :build
+  depends_on "prorab-extra" => :build
   depends_on "libutki"
 
   def install
