matrix2::scale() bugfix

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,6 +18,22 @@
             "problemMatcher": [
                 "$gcc"
             ]
+		},
+		{
+            "label": "test_clang++_debug",
+            "type": "shell",
+            "command": "make test CXX=clang++ autojobs=true debug=true",
+            "problemMatcher": [
+                "$gcc"
+            ]
+        },
+        {
+            "label": "test_g++_debug",
+            "type": "shell",
+            "command": "make test CXX=g++ autojobs=true debug=true",
+            "problemMatcher": [
+                "$gcc"
+            ]
         }
     ]
 }
