--- a/android/r4/src/main/AndroidManifest.xml
+++ b/android/r4/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
-    package="igagis.github.io.r4">
+    package="cppfw.github.io.r4">
 
     <application>
 
