--- a/homebrew/libr4.rb.in
+++ b/homebrew/libr4.rb.in
@@ -1,7 +1,7 @@
 class Libr4 < Formula
   desc "C++ 3d math library."
-  homepage "https://github.com/igagis/r4"
-  url "https://github.com/igagis/r4/archive/$(version).tar.gz"
+  homepage "https://github.com/cppfw/r4"
+  url "https://github.com/cppfw/r4/archive/$(version).tar.gz"
   sha256 "$(sha256)"
 
   depends_on "prorab" => :build
