--- a/src/makefile
+++ b/src/makefile
@@ -6,4 +6,7 @@ this_soname := 0
 
 this_out_dir := build
 
+# though we have no source files, we still need to indicate the C++ standard version because header files will be tested for compilation
+this_cxxflags += -std=c++14
+
 $(eval $(prorab-build-lib))
