--- a/tests/matrix3/makefile
+++ b/tests/matrix3/makefile
@@ -16,6 +16,6 @@ this_ldlibs += -lstdc++ -lm
 
 this_no_install := true
 
-$(eval $(prorab-build-app))
+# $(eval $(prorab-build-app))
 
-include $(d)../test_target.mk
+# include $(d)../test_target.mk
