--- a/tests/matrix4/makefile
+++ b/tests/matrix4/makefile
@@ -6,7 +6,7 @@ this_out_dir := build
 
 this_srcs := main.cpp
 
-this_cxxflags += -std=c++14 -fPIC
+this_cxxflags += -std=c++17 -fPIC
 
 ifeq ($(debug),true)
     this_cxxflags += -D DEBUG
@@ -16,6 +16,6 @@ this_ldlibs += -lstdc++ -lm
 
 this_no_install := true
 
-$(eval $(prorab-build-app))
+# $(eval $(prorab-build-app))
 
-include $(d)../test_target.mk
+# include $(d)../test_target.mk
