--- a/tests/vector3/makefile
+++ b/tests/vector3/makefile
@@ -2,17 +2,11 @@ include prorab.mk
 
 this_name := tests
 
-this_out_dir := build
-
 this_srcs := main.cpp
 
-this_cxxflags += -std=c++17 -fPIC
+$(eval $(call prorab-config, ../../config))
 
-ifeq ($(debug),true)
-    this_cxxflags += -D DEBUG
-endif
-
-this_ldlibs += -lstdc++ -lm
+this_ldlibs += -lm
 
 this_no_install := true
 
