rectangle test passes

--- a/tests/rectangle/makefile
+++ b/tests/rectangle/makefile
@@ -2,20 +2,14 @@ include prorab.mk
 
 this_name := tests
 
-this_out_dir := build
-
 this_srcs := main.cpp
 
-this_cxxflags += -std=c++17 -fPIC
+$(eval $(call prorab-config, ../../config))
 
-ifeq ($(debug),true)
-    this_cxxflags += -D DEBUG
-endif
-
-this_ldlibs += -lstdc++ -lm
+this_ldlibs += -lm
 
 this_no_install := true
 
-# $(eval $(prorab-build-app))
+$(eval $(prorab-build-app))
 
-# include $(d)../test_target.mk
+include $(d)../test_target.mk
