msvs: add test.cpp files to projects

--- a/msvs_solution/test_vector2/test_vector2.vcxproj
+++ b/msvs_solution/test_vector2/test_vector2.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\tests\vector2\main.cpp" />
+    <ClCompile Include="..\..\tests\vector2\*.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
