--- a/msvs_solution/r4/r4.vcxproj
+++ b/msvs_solution/r4/r4.vcxproj
@@ -484,13 +484,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\kolme\Matrix3.hpp" />
-    <ClInclude Include="..\..\src\kolme\Matrix4.hpp" />
-    <ClInclude Include="..\..\src\kolme\Quaternion.hpp" />
-    <ClInclude Include="..\..\src\kolme\Rectangle.hpp" />
-    <ClInclude Include="..\..\src\kolme\Vector2.hpp" />
-    <ClInclude Include="..\..\src\kolme\Vector3.hpp" />
-    <ClInclude Include="..\..\src\kolme\vector4.hpp" />
+    <ClInclude Include="..\..\src\**\*.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
