--- a/msvs_solution/test_vector3/test_vector3.vcxproj
+++ b/msvs_solution/test_vector3/test_vector3.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\tests\vector3\main.cpp" />
+    <ClCompile Include="..\..\tests\vector3\*.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
