--- a/msvs_solution/test_vector2/test_vector2.vcxproj.filters
+++ b/msvs_solution/test_vector2/test_vector2.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\tests\vector2\main.cpp">
+    <ClCompile Include="..\..\tests\vector2\*.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\tests\vector2\*.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
