--- a/msvs_solution/test_vector3/test_vector3.vcxproj.filters
+++ b/msvs_solution/test_vector3/test_vector3.vcxproj.filters
@@ -15,7 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\tests\vector3\main.cpp">
+    <ClCompile Include="..\..\tests\vector3\*.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\tests\vector3\*.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
