--- a/msvs_solution/test_matrix2/test_matrix2.vcxproj.filters
+++ b/msvs_solution/test_matrix2/test_matrix2.vcxproj.filters
@@ -18,7 +18,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\tests\matrix2\main.cpp">
+    <ClCompile Include="..\..\tests\matrix2\*.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\tests\matrix2\*.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
