--- a/msvs_solution/test_matrix2/test_matrix2.vcxproj
+++ b/msvs_solution/test_matrix2/test_matrix2.vcxproj
@@ -146,7 +146,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\tests\matrix2\*.cpp" />
+    <ClCompile Include="..\..\tests\matrix2\main.cpp" />
+    <ClCompile Include="..\..\tests\matrix2\test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
