--- a/msvs_solution/test_matrix4/test_matrix4.vcxproj
+++ b/msvs_solution/test_matrix4/test_matrix4.vcxproj
@@ -146,7 +146,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\tests\matrix4\*.cpp" />
+    <ClCompile Include="..\..\tests\matrix4\main.cpp" />
+    <ClCompile Include="..\..\tests\matrix4\test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
