--- a/msvs_solution/test_quaternion/test_quaternion.vcxproj
+++ b/msvs_solution/test_quaternion/test_quaternion.vcxproj
@@ -146,7 +146,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\tests\quaternion\*.cpp" />
+    <ClCompile Include="..\..\tests\quaternion\main.cpp" />
+    <ClCompile Include="..\..\tests\quaternion\test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
