--- a/msvs_solution/test_quaternion/test_quaternion.vcxproj.filters
+++ b/msvs_solution/test_quaternion/test_quaternion.vcxproj.filters
@@ -18,10 +18,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\tests\quaternion\*.cpp">
+    <ClCompile Include="..\..\tests\quaternion\main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\tests\quaternion\*.cpp">
+    <ClCompile Include="..\..\tests\quaternion\test.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
