--- a/msvs_solution/test_vector2/test_vector2.vcxproj
+++ b/msvs_solution/test_vector2/test_vector2.vcxproj
@@ -143,10 +143,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\tests\vector2\*.cpp" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ClCompile Include="..\..\tests\vector2\main.cpp" />
+    <ClCompile Include="..\..\tests\vector2\test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
