--- a/msvs_solution/test_vector3/test_vector3.vcxproj
+++ b/msvs_solution/test_vector3/test_vector3.vcxproj
@@ -143,10 +143,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\tests\vector3\*.cpp" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ClCompile Include="..\..\tests\vector3\main.cpp" />
+    <ClCompile Include="..\..\tests\vector3\test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
