--- a/conan/conanfile.py.in
+++ b/conan/conanfile.py.in
@@ -45,5 +45,6 @@ class R4Conan(ConanFile):
 		self.copy("*.a", dst="lib", src=self.name +     "/src/out/rel", keep_path=False)
 
 	def package_info(self):
+		pass
 		# TODO: uncomment in case r4 starts providing binary lib
 		#self.cpp_info.libs = [self.name]
