add libtst build dependency

--- a/debian/control.in
+++ b/debian/control.in
@@ -3,10 +3,10 @@ Section: libs
 Priority: extra
 Maintainer: Ivan Gagis <igagis@gmail.com>
 Build-Depends: debhelper (>= 9), prorab, prorab-extra, myci, doxygen,
-		libutki-dev
+		libutki-dev,
+		libtst-dev
 Build-Depends-Indep: doxygen
 Standards-Version: 3.9.2
-
 
 Package: libr4-dev
 Section: libdevel
