--- a/homebrew/libr4.rb.in
+++ b/homebrew/libr4.rb.in
@@ -6,6 +6,7 @@ class Libr4 < Formula
 
   depends_on "prorab" => :build
   depends_on "prorab-extra" => :build
+  depends_on "libtst" => :build
   depends_on "libutki"
 
   # use gmake here because otherwise homebrew uses default Mac's make which is of too old version 3.81
