--- a/msys2/PKGBUILD.in
+++ b/msys2/PKGBUILD.in
@@ -31,7 +31,7 @@ groups=()
 
 depends=("${pkgPrefix}utki")
 
-makedepends=('myci' 'prorab' 'prorab-extra' 'doxygen')
+makedepends=('myci' 'prorab' 'prorab-extra' 'doxygen' "${pkgPrefix}tst")
 checkdepends=('myci')
 optdepends=()
 provides=()
