msvs: add missing config

--- a/msvs_solution/unit_tests/unit_tests.vcxproj
+++ b/msvs_solution/unit_tests/unit_tests.vcxproj
@@ -13,6 +13,10 @@
       <Configuration>v141_Release</Configuration>
       <Platform>Win32</Platform>
     </ProjectConfiguration>
+    <ProjectConfiguration Include="v141_Release|x64">
+      <Configuration>v141_Release</Configuration>
+      <Platform>x64</Platform>
+    </ProjectConfiguration>
     <ProjectConfiguration Include="v142_Debug_MD|Win32">
       <Configuration>v142_Debug_MD</Configuration>
       <Platform>Win32</Platform>
