msvs: pick sources by wildcard

--- a/msvs_solution/unit_tests/unit_tests.vcxproj
+++ b/msvs_solution/unit_tests/unit_tests.vcxproj
@@ -679,7 +679,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\tests\unit\src\vector2.cpp" />
+    <ClCompile Include="..\..\tests\unit\src\**\*.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
