--- a/cocoapods/r4.podspec.in
+++ b/cocoapods/r4.podspec.in
@@ -11,7 +11,8 @@ Pod::Spec.new do |s|
   s.source = { :http => "http://gagis.hopto.org/repo/cppfw/cocoapods/#{s.name}-#{s.version}.zip" }
   s.source_files  = "include/**/*.{hpp,h}"
   s.header_mappings_dir = "include"
-#  s.ios.vendored_library = "lib/ios/lib#{s.name}.a"
 
-  s.dependency 'utki', '>= 1.1.123'
+#  s.ios.vendored_framework = "lib/ios/#{s.name}.xcframework"
+
+  s.dependency 'utki', '>= 1.1.164'
 end
