add write permissions to actions on ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
 ##### coverage #####
   coverage:
     permissions:
+      actions: write
       pull-requests: write
     runs-on: ubuntu-latest
     container: debian:bullseye
